// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty props 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger-screen"
    >
      Expense
    </div>
    <div
      className="show-for-larger-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger-screen"
    >
      Expense
    </div>
    <div
      className="show-for-larger-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <ExpenseListItem
        amount={395}
        createdAt={0}
        description="Gum"
        id="1"
        note="now"
      />
      <ExpenseListItem
        amount={139500}
        createdAt={-349200000}
        description="Rent"
        id="2"
        note="ever"
      />
      <ExpenseListItem
        amount={3950}
        createdAt={345600000}
        description="Credit Card"
        id="3"
        note="test"
      />
    </div>
  </div>
</div>
`;
